fixes background color not showing up when scrolling

--- a/frontend/src/css/homepage.css
+++ b/frontend/src/css/homepage.css
@@ -1,11 +1,6 @@
 .homepage {
     display: grid;
     gap: 0px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto auto;
     grid-gap: 20px;
-}
-
-.sidebar.open .homepage {
-    display: none;
-    grid-template-columns: 1fr 1fr 1fr;
 }
