--- a/frontend/src/css/sidenav.css
+++ b/frontend/src/css/sidenav.css
@@ -92,6 +92,12 @@ transform: translateY(-50%);
 .sidebar.open li .tooltip{
 display: none;
 }
+
+a.logo-link {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
 .sidebar input{
 font-size: 15px;
 color: #FFF;
