--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -1,4 +1,5 @@
-* {
+html, body {
+    /* min-height: 100vh; */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,13 +9,13 @@
 body {
     position: relative;
     min-height: 100vh;
-    width: 100%;
-    /* overflow: hidden; */
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 .content {
     position: absolute;
-    height: 100%;
+    min-height: 100vh;
     width: calc(100% - 78px);
     left: 78px;
     padding-left: 10px;
